# depth_clustering_for_rail

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
examples/: CMakeLists.txt
examples/ros_nodes/: save_clusters_node.cpp  show_objects_node.cpp
examples/simple_nodes/: show_objects_kitti.cpp
src/: CMakeLists.txt
src/clusterers/: abstract_clusterer.h  image_based_clusterer.h
src/communication/: CMakeLists.txt
src/ground_removal/: CMakeLists.txt  depth_ground_remover.cpp
src/image_labelers/: CMakeLists.txt  linear_image_labeler.h
src/image_labelers/diff_helpers/: CMakeLists.txt
src/projections/: CMakeLists.txt  projection_params.cpp  projection_params.h  spherical_projection.cpp
src/qt/: CMakeLists.txt
src/qt/widgets/: opengl_folder_player.cpp
src/ros2/: CMakeLists.txt  robosense_depth_clustering_node.cpp  robosense_depth_clustering_node.h  utils.h
src/rotating_calipers/: CMakeLists.txt  RotatingCalipers.cpp  RotatingCalipers.h
src/tclap/: ValueArg.h
src/utils/: CMakeLists.txt  cloud.cpp
src/visualization/: CMakeLists.txt  cloud_saver.cpp
test/: CMakeLists.txt  test_image_clusterer.cpp  test_proj_params.cpp
